name:                Euler
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Euler.Answers
                     , Euler.Util.Amicable
                     , Euler.Util.Arithmetic
                     , Euler.Util.Collatz
                     , Euler.Util.Date
                     , Euler.Util.Decimal
                     , Euler.Util.Digit
                     , Euler.Util.Fibonacci
                     , Euler.Util.List
                     , Euler.Util.Map
                     , Euler.Util.Prime
                     , Euler.Util.TrianglePath
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , digits
                     , file-embed
                     , multiset
                     , multiset-comb
                     , primes
                     , scientific
                     , semigroups
                     , text
  default-language:    Haskell2010

test-suite Fast
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Fast.hs
  build-depends:       base
                     , Euler
                     , containers
                     , file-embed
                     , semigroups
                     , text
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Problem4
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Problem4.hs
  build-depends:       base
                     , file-embed
                     , text
                     , Euler
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Problem10
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Problem10.hs
  build-depends:       base
                     , file-embed
                     , text
                     , Euler
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Problem12
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Problem12.hs
  build-depends:       base
                     , file-embed
                     , text
                     , Euler
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Problem14
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Problem14.hs
  build-depends:       base
                     , file-embed
                     , text
                     , Euler
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Problem21
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Problem21.hs
  build-depends:       base
                     , file-embed
                     , text
                     , Euler
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Problem23
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Problem23.hs
  build-depends:       base
                     , file-embed
                     , text
                     , Euler
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Problem24
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Problem24.hs
  build-depends:       base
                     , file-embed
                     , text
                     , Euler
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Problem25
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Problem25.hs
  build-depends:       base
                     , file-embed
                     , text
                     , Euler
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Problem26
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Problem26.hs
  build-depends:       base
                     , file-embed
                     , text
                     , Euler
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Problem27
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Problem27.hs
  build-depends:       base
                     , file-embed
                     , text
                     , Euler
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Problem30
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Problem30.hs
  build-depends:       base
                     , file-embed
                     , text
                     , Euler
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Problem31
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Problem31.hs
  build-depends:       base
                     , file-embed
                     , text
                     , Euler
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Problem32
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Problem32.hs
  build-depends:       base
                     , file-embed
                     , text
                     , Euler
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Problem34
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Problem34.hs
  build-depends:       base
                     , file-embed
                     , text
                     , Euler
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Problem35
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Problem35.hs
  build-depends:       base
                     , file-embed
                     , text
                     , Euler
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Problem36
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Problem36.hs
  build-depends:       base
                     , file-embed
                     , text
                     , Euler
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Problem37
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Problem37.hs
  build-depends:       base
                     , file-embed
                     , text
                     , Euler
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Problem39
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Problem39.hs
  build-depends:       base
                     , file-embed
                     , text
                     , Euler
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
