name:                Euler
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Euler.Problems
                     , Euler.Problems.Problem9
                     , Euler.Problems.Problem11
                     , Euler.Problems.Problem15
                     , Euler.Problems.Problem19
                     , Euler.Problems.Problem22
                     , Euler.Problems.Problem23
                     , Euler.Problems.Problem31
                     , Euler.Problems.Problem33
                     , Euler.Problems.Problem42
                     , Euler.Problems.Problem43
                     , Euler.Problems.Problem46
                     , Euler.Problems.Problem47
                     , Euler.Util.Amicable
                     , Euler.Util.Arithmetic
                     , Euler.Util.Collatz
                     , Euler.Util.ContinuedFractions
                     , Euler.Util.Date
                     , Euler.Util.Decimal
                     , Euler.Util.Digit
                     , Euler.Util.Fibonacci
                     , Euler.Util.FigurateNumbers
                     , Euler.Util.FrontierSearch
                     , Euler.Util.Inf
                     , Euler.Util.List
                     , Euler.Util.Map
                     , Euler.Util.NumberWords
                     , Euler.Util.Pandigital
                     , Euler.Util.PellEquation
                     , Euler.Util.Polynomial
                     , Euler.Util.Prime
                     , Euler.Util.TrianglePath
                     , Euler.Util.WordScore
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , data-ordlist
                     , multiset
                     , multiset-comb
                     , primes
                     , scientific
                     , semigroups
                     , text
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , Euler
                     , containers
                     , semigroups
                     , text
                     , HUnit
                     , test-framework
                     , test-framework-hunit
                     , doctest
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
