name: euler
version: 0.1.0.0

build-type: Simple
cabal-version: >= 1.10

library
  default-language: Haskell2010
  hs-source-dirs: src
  default-extensions: NoImplicitPrelude
  ghc-options: -Wall
  other-modules: Paths_euler

  build-depends:
      base
    , containers
    , data-ordlist
    , exceptions
    , multimap
    , multiset
    , multiset-comb
    , primes
    , scientific
    , semigroups
    , text

  exposed-modules:
      Euler.Prelude
      Euler.Problems
      Euler.Problems.Problem9
      Euler.Problems.Problem11
      Euler.Problems.Problem15
      Euler.Problems.Problem19
      Euler.Problems.Problem22
      Euler.Problems.Problem23
      Euler.Problems.Problem31
      Euler.Problems.Problem33
      Euler.Problems.Problem42
      Euler.Problems.Problem43
      Euler.Problems.Problem46
      Euler.Problems.Problem47
      Euler.Problems.Problem68
      Euler.Problems.Problem69
      Euler.Util.Amicable
      Euler.Util.Arithmetic
      Euler.Util.Collatz
      Euler.Util.ContinuedFractions
      Euler.Util.Date
      Euler.Util.Decimal
      Euler.Util.Digit
      Euler.Util.Fibonacci
      Euler.Util.FigurateNumbers
      Euler.Util.Foldable
      Euler.Util.FrontierSearch
      Euler.Util.Inf
      Euler.Util.List
      Euler.Util.Map
      Euler.Util.NumberWords
      Euler.Util.Pandigital
      Euler.Util.PellEquation
      Euler.Util.Polynomial
      Euler.Util.Prime
      Euler.Util.TrianglePath
      Euler.Util.WordScore

test-suite doctest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: doctest.hs
  hs-source-dirs: test
  default-extensions: NoImplicitPrelude
  ghc-options: -Wall -threaded

  build-depends:
      QuickCheck
    , base
    , containers
    , data-ordlist
    , doctest
    , exceptions
    , multimap
    , multiset
    , multiset-comb
    , primes
    , scientific
    , semigroups
    , text

  other-modules:
      Euler.Test
      Paths_euler

test-suite fast
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: fast.hs
  hs-source-dirs: test
  default-extensions: NoImplicitPrelude
  ghc-options: -Wall -threaded

  build-depends:
      HUnit
    , base
    , containers
    , data-ordlist
    , euler
    , euler-test
    , exceptions
    , multimap
    , multiset
    , multiset-comb
    , primes
    , scientific
    , semigroups
    , test-framework
    , test-framework-hunit
    , text

  other-modules:
      Euler.Test
      Paths_euler

test-suite one
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: one.hs
  hs-source-dirs: test
  default-extensions: NoImplicitPrelude
  ghc-options: -Wall -threaded

  build-depends:
      HUnit
    , base
    , containers
    , data-ordlist
    , euler
    , euler-test
    , exceptions
    , multimap
    , multiset
    , multiset-comb
    , primes
    , scientific
    , semigroups
    , test-framework
    , test-framework-hunit
    , text

  other-modules:
      Euler.Test
      Paths_euler
