name:                problem7
version:             0
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:   Problem7
  build-depends:     base,
                     primes ==0.2.1.0
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite Main
  type:              exitcode-stdio-1.0
  x-uses-tf:         true
  hs-source-dirs:    tests
  main-is:           Main.hs
  default-language:  Haskell2010
  ghc-options:       -Wall
  build-depends:     base,
                     problem7,
                     HUnit,
                     test-framework,
                     test-framework-hunit
