name:                  Problem11
version:               0
build-type:            Simple
cabal-version:         >= 1.10

library
  exposed-modules:     Problem11
  build-depends:       base
                     , split
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite Main
  type:                exitcode-stdio-1.0
  x-uses-tf:           true
  hs-source-dirs:      tests
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base
                     , Problem11
                     , HUnit
                     , test-framework
                     , test-framework-hunit
