name:                  Problem16
version:               0
build-type:            Simple
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Problem16
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite Main
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , Problem16
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
